# -neon-neural-efficient-object-notation

./: COMPARISON.md  NEON_SPEC.md  QUICKSTART.md  README.md  README_FINAL.md  SPEC.md  index.ts  jest.config.js  neon-decoder.ts  neon-demo.html  neon-encoder.ts  neon-examples.ts  package.json  tsconfig.esm.json  tsconfig.json
benchmarks/: benchmark.ts  datasets.ts
python/: README.md  pyproject.toml
python/neon/: __init__.py  decoder.py  encoder.py  types.py
python/tests/: test_encoder.py
rust/: Cargo.toml  README.md
rust/benches/: benchmark.rs
rust/src/: decoder.rs  encoder.rs  error.rs  lib.rs  types.rs
src/: decoder.ts  encoder.ts  index.ts  types.ts
tests/: decoder.test.ts  encoder.test.ts
