[package]
name = "neon-format"
version = "2.0.0"
edition = "2021"
authors = ["Ewerton Daniel"]
description = "NEON - Neural Efficient Object Notation: Token-efficient data serialization for AI/LLM"
license = "MIT"
repository = "https://github.com/EwertonDaniel/-neon-neural-efficient-object-notation"
documentation = "https://github.com/EwertonDaniel/-neon-neural-efficient-object-notation#readme"
keywords = ["neon", "serialization", "json", "compression", "ai", "llm"]
categories = ["encoding", "parsing", "data-structures"]
readme = "README.md"

[lib]
name = "neon"
path = "src/lib.rs"

[[bin]]
name = "neon"
path = "src/bin/cli.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
regex-lite = "0.1"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
